--- a/package.json
+++ b/package.json
@@ -16,38 +16,38 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@types/node": "24.2.1",
+    "@types/react": "19.1.9",
     "@types/react-dom": "^18",
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
-    "@prisma/client": "^5.0.0",
-    "prisma": "^5.0.0",
-    "zod": "^3.22.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
-    "class-variance-authority": "^0.7.0",
-    "lucide-react": "^0.290.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-separator": "^1.0.3",
     "framer-motion": "^10.16.0",
+    "lucide-react": "^0.290.0",
+    "next": "14.0.0",
     "next-auth": "^4.24.0",
-    "@next-auth/prisma-adapter": "^1.0.7"
+    "postcss": "^8",
+    "prisma": "^5.0.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.9.2",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
-    "vitest": "^1.0.0",
+    "@types/bcryptjs": "^2.4.0",
     "@vitejs/plugin-react": "^4.0.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.0.0",
     "prettier": "^3.0.0",
     "tsx": "^4.0.0",
-    "@types/bcryptjs": "^2.4.0"
+    "vitest": "^1.0.0"
   }
 }
